Bug 168617 - Writer markdown import: task list item is static
Summary: Writer markdown import: task list item is static
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Markdown
  Show dependency treegraph
 
Reported: 2025-09-30 06:20 UTC by Miklos Vajna
Modified: 2025-09-30 11:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (20 bytes, text/markdown)
2025-09-30 06:20 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-09-30 06:20:36 UTC
Created attachment 203050 [details]
Minimal reproducer

Steps to reproduce the problem:

1) open the attached bugdoc

2) click on one of the checkmarks (checked or unchecked)

Expected result: toggle between checked and unchecked

Actual result: the checkboxes are static
Comment 1 Commit Notification 2025-09-30 11:28:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7608d96302652eb48863da441e121e0c61350412

tdf#168617 sw markdown filter: map tasks to checkbox content controls and back

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.