tdf#168617 sw markdown filter: map tasks to checkbox content controls and back

Import the bugdoc, try to click on the unchecked checkbox to check it,
nothing happens, while this works in some other markdown renderers.

Writer has a checkbox content control type that can model a task list
item described at
<https://github.github.com/gfm/#task-list-items-extension->.

Fix the problem by replacing the static checkboxes with a content
control so the user can interact with the checkbox.

And do the opposite during export.

Change-Id: I7ed66481bfffbf79aa828e7b3dbe34c0d753a817
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191648
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>